--- a/recordermanager/src/main/res/values/strings.xml
+++ b/recordermanager/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
 
     <string name="rm_warn_record_time_too_short">录制时间小于1秒，请重试</string>
     <string name="rm_warn_allow_record_video_permissions">请允许拍摄录音存储权限，以便使用拍摄功能</string>
-    <string name="rm_error_start_record_video_page">启动模块参数异常</string>
+
+    <string name="rm_error_start_record_video_page">启动视频录制界面参数异常</string>
 
 </resources>
