Refactor project code

--- a/recordermanager/src/main/res/values-zh/strings.xml
+++ b/recordermanager/src/main/res/values-zh/strings.xml
@@ -13,5 +13,6 @@
     <string name="rm_warn_allow_record_video_permissions">请允许拍摄录音存储权限，以便使用拍摄功能</string>
 
     <string name="rm_error_start_record_video_page">启动视频录制界面参数异常</string>
+    <string name="rm_error_switch_flashlight">切换闪光灯失败</string>
 
 </resources>
