1.add minDuration 2.optimize code

--- a/recordermanager/src/main/res/values/strings.xml
+++ b/recordermanager/src/main/res/values/strings.xml
@@ -8,8 +8,8 @@
     <string name="rm_request_record_video_rationale">Please open the relevant authority for video recording</string>
 
     <string name="rm_fill_record_timing">0:%s</string>
+    <string name="rm_fill_warn_record_time_too_short">The recording time is less than %d second, please try again</string>
 
-    <string name="rm_warn_record_time_too_short">The recording time is less than 1 second, please try again</string>
     <string name="rm_warn_allow_record_video_permissions">Please allow recording storage permissions in order to use the shooting function</string>
 
     <string name="rm_error_start_record_video_page">The parameters of the start video recording interface are abnormal</string>
