--- a/recordermanager/src/main/res/values-zh/strings.xml
+++ b/recordermanager/src/main/res/values-zh/strings.xml
@@ -9,7 +9,7 @@
 
     <string name="rm_fill_record_timing">0:%s</string>
 
-    <string name="rm_warn_record_time_too_short">录制时间小于1秒，请重试</string>
+    <string name="rm_fill_warn_record_time_too_short">录制时间小于%d秒，请重试</string>
     <string name="rm_warn_allow_record_video_permissions">请允许拍摄录音存储权限，以便使用拍摄功能</string>
 
     <string name="rm_error_start_record_video_page">启动视频录制界面参数异常</string>
